--- a/scripts/.isaac_ros_common-config
+++ b/scripts/.isaac_ros_common-config
@@ -5,9 +5,9 @@ BASE_DOCKER_REGISTRY_NAMES=("nvcr.io/isaac/ros")
 ISAAC_ROS_WS=/home/vschorp/dev/orx/orx_middleware/ros2_ws
 
 # docker_deply.sh config
-BASE_IMAGE_KEY=aarch64.ros2_humble.user.decoder
+BASE_IMAGE_KEY=aarch64.ros2_humble.user.zed
 # BASE_IMAGE_KEY=x86_64.ros2_humble
-DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-jetson-zed_decoder
+DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-jetson-zed
 ROS_WS=/home/vschorp/dev/orx/orx_middleware/ros2_ws
-LAUNCH_PACKAGE=rosbag_recorder
-LAUNCH_FILE=rosbag_recorder_cli_launch.py
+LAUNCH_PACKAGE=zed_wrapper
+LAUNCH_FILE=orx_zedm_camera.launch.py
