--- a/docker/Dockerfile.bag_data_extractor
+++ b/docker/Dockerfile.bag_data_extractor
@@ -10,5 +10,5 @@ ARG BASE_IMAGE
 FROM ${BASE_IMAGE}
 
 USER ${USERNAME}
-RUN python3 -m pip install open3d
+RUN python3 -m pip install open3d pyav
 USER root
