--- a/scripts/.isaac_ros_common-config
+++ b/scripts/.isaac_ros_common-config
@@ -5,9 +5,9 @@ BASE_DOCKER_REGISTRY_NAMES=("nvcr.io/isaac/ros")
 ISAAC_ROS_WS=/home/vschorp/dev/orx/orx_middleware/ros2_ws
 
 # docker_deply.sh config
-BASE_IMAGE_KEY=aarch64.ros2_humble.user.realsense.encoder
-# BASE_IMAGE_KEY=x86_64.ros2_humble
-DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-jetson-realsense-encoded
+# BASE_IMAGE_KEY=aarch64.ros2_humble.user.realsense.encoder
+BASE_IMAGE_KEY=x86_64.ros2_humble.dgx_user.bag_data_extractor
+DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-dgx-bag_data_extractor
 ROS_WS=/home/vschorp/dev/orx/orx_middleware/ros2_ws
-LAUNCH_PACKAGE=realsense2_camera # realsense2_camera
-LAUNCH_FILE=orx_realsense_d405_encoded_launch.py # orx_realsense_d405_encoded_launch.py 
+LAUNCH_PACKAGE=bag_data_extractor
+LAUNCH_FILE=bag_data_extractor_launch.py
