--- a/scripts/.isaac_ros_common-config
+++ b/scripts/.isaac_ros_common-config
@@ -5,9 +5,9 @@ BASE_DOCKER_REGISTRY_NAMES=("nvcr.io/isaac/ros")
 ISAAC_ROS_WS=/home/vschorp/dev/orx/orx_middleware/ros2_ws
 
 # docker_deply.sh config
-BASE_IMAGE_KEY=aarch64.ros2_humble.user.encoder
+BASE_IMAGE_KEY=aarch64.ros2_humble.user.zed.encoder
 # BASE_IMAGE_KEY=x86_64.ros2_humble.dgx_user.bag_data_extractor
-DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-jetson-realsense_encoder
+DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-jetson-zed-encoded
 ROS_WS=/home/vschorp/dev/orx/orx_middleware/ros2_ws
-LAUNCH_PACKAGE=isaac_ros_h264_encoder_decoder
-LAUNCH_FILE=intel_realsense_encoder.launch.py 
+LAUNCH_PACKAGE=zed_wrapper
+LAUNCH_FILE=orx_zedm_camera_encoded.launch.py
