--- a/docker/Dockerfile.aarch64
+++ b/docker/Dockerfile.aarch64
@@ -130,11 +130,13 @@ apt-get update && apt-get install -y \
 
 # Additional Python dependencies
 RUN python3 -m pip install -U \
+    ninja
+
+RUN python3 -m pip install -U \
     Cython \
     pymongo \
     wheel \
     scikit-learn \
-    ninja \
     networkx \
     "numpy>=1.24.4,<2" \
     numpy-quaternion \
@@ -214,9 +216,10 @@ ENV LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:/opt/tritonserver/lib"
 
 # Install boost version >= 1.78 for boost::span
 # Current libboost-dev apt packages are < 1.78, so install from tar.gz
+# https://boostorg.jfrog.io/artifactory/main/release/1.80.0/source/boost_1_80_0.tar.gz \
 RUN --mount=type=cache,target=/var/cache/apt \
     wget -O /tmp/boost.tar.gz \
-    https://boostorg.jfrog.io/artifactory/main/release/1.80.0/source/boost_1_80_0.tar.gz \
+    https://sourceforge.net/projects/boost/files/boost/1.80.0/boost_1_80_0.tar.gz/download \
     && (cd /tmp && tar xzf boost.tar.gz) \
     && cd /tmp/boost_1_80_0 \
     && ./bootstrap.sh --prefix=/usr \
