--- a/docker/Dockerfile.encoder
+++ b/docker/Dockerfile.encoder
@@ -10,4 +10,24 @@ ARG BASE_IMAGE
 FROM ${BASE_IMAGE}
 
 RUN apt-get update && apt-get install -y \
-    ros-humble-isaac-ros-h264-encoder
+    ros-humble-gxf-isaac-atlas\
+    ros-humble-gxf-isaac-gems\
+    ros-humble-gxf-isaac-gxf-helpers\
+    ros-humble-gxf-isaac-image-flip\
+    ros-humble-gxf-isaac-message-compositor\
+    ros-humble-gxf-isaac-messages\
+    ros-humble-gxf-isaac-optimizer\
+    ros-humble-gxf-isaac-sight\
+    ros-humble-gxf-isaac-tensorops\
+    ros-humble-isaac-ros-gxf\
+    ros-humble-isaac-ros-image-proc\
+    ros-humble-isaac-ros-managed-nitros\
+    ros-humble-isaac-ros-nitros\
+    ros-humble-isaac-ros-nitros-camera-info-type\
+    ros-humble-isaac-ros-nitros-image-type\
+    ros-humble-isaac-ros-nitros-tensor-list-type\
+    ros-humble-isaac-ros-nitros-compressed-image-type\
+    ros-humble-isaac-ros-tensor-list-interfaces\
+    ros-humble-magic-enum
+
+# ros-humble-isaac-ros-h264-encoder
