--- a/docker/Dockerfile.x86_64
+++ b/docker/Dockerfile.x86_64
@@ -30,8 +30,8 @@ apt-get update && apt-get install -y \
 # Add Isaac apt repository
 RUN --mount=type=cache,target=/var/cache/apt \
     wget -qO - https://isaac.download.nvidia.com/isaac-ros/repos.key | apt-key add - && \
-    grep -qxF "deb https://isaac.download.nvidia.com/isaac-ros/release-3 $(lsb_release -cs) release-3.0" /etc/apt/sources.list || \
-    echo "deb https://isaac.download.nvidia.com/isaac-ros/release-3 $(lsb_release -cs) release-3.0" | tee -a /etc/apt/sources.list \
+    grep -qxF "deb https://isaac.download.nvidia.com/isaac-ros/release-3 $(lsb_release -cs) legacy-release-3.1" /etc/apt/sources.list || \
+    echo "deb https://isaac.download.nvidia.com/isaac-ros/release-3 $(lsb_release -cs) legacy-release-3.1" | tee -a /etc/apt/sources.list \
     && apt-get update
 
 # Fundamentals
