--- a/scripts/.isaac_ros_common-config
+++ b/scripts/.isaac_ros_common-config
@@ -5,10 +5,10 @@ BASE_DOCKER_REGISTRY_NAMES=("nvcr.io/isaac/ros")
 ISAAC_ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
 
 # docker_deply.sh config
-# BASE_IMAGE_KEY=aarch64.ros2_humble.user
-BASE_IMAGE_KEY=x86_64.ros2_humble.dgx_user.bag_data_extractor
+BASE_IMAGE_KEY=aarch64.ros2_humble.user.decoder.resizer
+# BASE_IMAGE_KEY=x86_64.ros2_humble.dgx_user.bag_data_extractor
 # BASE_IMAGE_KEY=x86_64.ros2_humble.user.bag_data_extractor
-DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-dgx-bag_data_extractor
+DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-jetson-hdmi_input_decoder_resizer
 ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
-LAUNCH_PACKAGE=bag_data_extractor
-LAUNCH_FILE=bag_data_extractor_launch.py
+LAUNCH_PACKAGE=nitros_resize
+LAUNCH_FILE=orx_hdmi_input_decoder_resizer.launch.py
