update configuration for fri kuka deployment and add custom scripts

--- a/scripts/.isaac_ros_common-config
+++ b/scripts/.isaac_ros_common-config
@@ -1,8 +1,8 @@
 # run_dev.sh config
-CONFIG_IMAGE_KEY=ros2_humble.user.
-CONFIG_DOCKER_SEARCH_DIRS=/home/${USER}/dev/orx/orx_middleware/isaac_ros_common/docker
+CONFIG_IMAGE_KEY=ros2_humble.sony_a7r.user
+CONFIG_DOCKER_SEARCH_DIRS=/home/fred/orx_middleware/isaac_ros_common/docker
 BASE_DOCKER_REGISTRY_NAMES=("nvcr.io/isaac/ros")
-ISAAC_ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
+ISAAC_ROS_WS=/home/fred/orx_middleware/ros2_ws
 
 # docker_deply.sh config
 BASE_IMAGE_KEY=aarch64.ros2_humble.user.decoder.resizer
