--- a/docker/Dockerfile.aarch64
+++ b/docker/Dockerfile.aarch64
@@ -245,5 +245,11 @@ apt-add-repository ppa:mosquitto-dev/mosquitto-ppa \
 RUN python3 -m pip install -U \
     jetson-stats
 
+# Patch vulnerabilities from base image
+# Upgrade system packages for security patches
+RUN --mount=type=cache,target=/var/cache/apt \
+apt-get update && apt-get install -y \
+        nghttp2=1.43.0-1ubuntu0.2
+
 # Store list of packages (must be last)
 RUN mkdir -p /opt/nvidia/isaac_ros_dev_base && dpkg-query -W | sort > /opt/nvidia/isaac_ros_dev_base/aarch64-end-packages.csv
