--- a/scripts/.isaac_ros_common-config
+++ b/scripts/.isaac_ros_common-config
@@ -1,14 +1,14 @@
 # run_dev.sh config
-CONFIG_IMAGE_KEY=ros2_humble.sony_a7r.user
-CONFIG_DOCKER_SEARCH_DIRS=/home/orx/dev/orx/orx_middleware/isaac_ros_common/docker
+CONFIG_IMAGE_KEY=ros2_humble.user.hdmi_input.encoder
+CONFIG_DOCKER_SEARCH_DIRS=/home/${USER}/dev/orx/orx_middleware/isaac_ros_common/docker
 BASE_DOCKER_REGISTRY_NAMES=("nvcr.io/isaac/ros")
-ISAAC_ROS_WS=/home/orx/dev/orx/orx_middleware/ros2_ws
+ISAAC_ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
 
 # docker_deply.sh config
-BASE_IMAGE_KEY=aarch64.ros2_humble.sony_a7r.user
+BASE_IMAGE_KEY=aarch64.ros2_humble.user.realsense.encoder
 # BASE_IMAGE_KEY=x86_64.ros2_humble.dgx_user.bag_data_extractor
 # BASE_IMAGE_KEY=x86_64.ros2_humble.user.bag_data_extractor
-DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-jetson-realsense_d405_decoder_resizer
+DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-jetson-realsense_d405-encoded
 ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
-LAUNCH_PACKAGE=nitros_resize
-LAUNCH_FILE=orx_intel_realsense_d405_decoder_resizer.launch.py
+LAUNCH_PACKAGE=realsense2_camera
+LAUNCH_FILE=orx_realsense_d405_encoded.launch.py
