--- a/docker/Dockerfile.x86_64
+++ b/docker/Dockerfile.x86_64
@@ -182,7 +182,8 @@ apt-get update && apt-get install -y \
         nghttp2=1.43.0-1ubuntu0.2 \
         openssh-client=1:8.9p1-3ubuntu0.10 \
         libcurl3-gnutls=7.81.0-1ubuntu1.20 \
-        libc-bin=2.35-0ubuntu3.8
+        glibc-tools \
+        rpcbind
 
 # Store list of packages (must be last)
 RUN mkdir -p /opt/nvidia/isaac_ros_dev_base && dpkg-query -W | sort > /opt/nvidia/isaac_ros_dev_base/x86_64-end-packages.csv
