--- a/scripts/.isaac_ros_common-config
+++ b/scripts/.isaac_ros_common-config
@@ -5,10 +5,10 @@ BASE_DOCKER_REGISTRY_NAMES=("nvcr.io/isaac/ros")
 ISAAC_ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
 
 # docker_deply.sh config
-BASE_IMAGE_KEY=aarch64.ros2_humble.user.realsense.encoder
-# BASE_IMAGE_KEY=x86_64.ros2_humble.dgx_user.bag_data_extractor
-# BASE_IMAGE_KEY=x86_64.ros2_humble.user.bag_data_extractor
-DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-jetson-realsense_d405-encoded
+# BASE_IMAGE_KEY=aarch64.ros2_humble.user.realsense.encoder
+# BASE_IMAGE_KEY=x86_64.ros2_humble.dgx_user.orx_data_processing
+BASE_IMAGE_KEY=x86_64.ros2_humble.user.orx_data_processing
+DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-desktop-bag_data_extractor
 ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
-LAUNCH_PACKAGE=realsense2_camera
-LAUNCH_FILE=orx_realsense_d405_encoded.launch.py
+LAUNCH_PACKAGE=orx_data_processing
+LAUNCH_FILE=bag_data_extractor.launch.py
