--- a/scripts/.isaac_ros_common-config
+++ b/scripts/.isaac_ros_common-config
@@ -2,13 +2,13 @@
 CONFIG_IMAGE_KEY=ros2_humble.user
 CONFIG_DOCKER_SEARCH_DIRS=/home/${USER}/dev/orx/orx_middleware/isaac_ros_common/docker
 BASE_DOCKER_REGISTRY_NAMES=("nvcr.io/isaac/ros")
-ISAAC_ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
+ISAAC_ROS_WS=/home/${USER}/dev/orx/orx_middleware/kuka_camera
 
 # docker_deply.sh config
-# BASE_IMAGE_KEY=aarch64.ros2_humble.user.realsense.encoder
+BASE_IMAGE_KEY=aarch64.ros2_humble.user
 # BASE_IMAGE_KEY=x86_64.ros2_humble.dgx_user.orx_data_processing
-BASE_IMAGE_KEY=x86_64.ros2_humble.user.orx_data_processing
-DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-desktop-bag_data_extractor
-ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
-LAUNCH_PACKAGE=orx_data_processing
-LAUNCH_FILE=bag_data_extractor.launch.py
+# BASE_IMAGE_KEY=x86_64.ros2_humble.user.orx_data_processing
+DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-jetson-ord-test-kuka
+ROS_WS=/home/${USER}/dev/orx/orx_middleware/kuka_camera
+LAUNCH_PACKAGE=user_applications
+LAUNCH_FILE=pictures_from_poses.launch.py
