--- a/docker/Dockerfile.additions
+++ b/docker/Dockerfile.additions
@@ -10,7 +10,7 @@ RUN --mount=type=cache,target=/var/cache/apt \
 # ROS dependencies
 RUN --mount=type=cache,target=/var/cache/apt \
     apt-get update && apt-get install -y \
-    ros-humble-behaviortree-cpp-v3
+    sudo apt-get install ros-humble-behaviortree-cpp-v3
 
 # Isaac ROS dependencies
 RUN --mount=type=cache,target=/var/cache/apt \
@@ -32,3 +32,11 @@ RUN --mount=type=cache,target=/var/cache/apt \
     ros-humble-isaac-ros-test-cmake
 
 # Livox Lidar dependencies
+RUN git clone https://github.com/Livox-SDK/Livox-SDK2.git && \
+    cd Livox-SDK2 && \
+    mkdir build && \
+    cd build && \
+    cmake .. && make -j && \
+    make install && \
+    echo "/usr/local/lib" > /etc/ld.so.conf.d/livox.conf && \
+    ldconfig
