--- a/docker/Dockerfile.zed
+++ b/docker/Dockerfile.zed
@@ -9,32 +9,42 @@
 ARG BASE_IMAGE
 FROM ${BASE_IMAGE}
 
-ARG ZED_SDK_MAJOR=4
-ARG ZED_SDK_MINOR=1
+# ARG ZED_SDK_MAJOR=4
+# ARG ZED_SDK_MINOR=1
+
+ARG ZED_SDK_MAJOR=5
+ARG ZED_SDK_MINOR=0
 
 # zed-ros2-wrapper dependencies
-RUN --mount=type=cache,target=/var/cache/apt \
-apt-get update && apt-get install -y \
-    libgeographic-dev  \
-    ros-humble-geographic-info \
-    ros-humble-nmea-msgs \
-    ros-humble-robot-localization \
-    ros-humble-xacro
+# RUN --mount=type=cache,target=/var/cache/apt \
+#   apt-get update && apt-get install -y \
+#   libgeographic-dev  \
+#   ros-humble-geographic-info \
+#   ros-humble-nmea-msgs \
+#   ros-humble-robot-localization \
+#   ros-humble-xacro
 
 # The zed installation script expects to be run as non-root user and needs the USER ENV variable to be set
 ENV USER=${USERNAME}
 USER ${USERNAME}
 
 COPY scripts/install-zed-x86_64.sh /opt/zed/install-zed-x86_64.sh
-COPY scripts/install-zed-aarch64.sh /opt/zed/install-zed-aarch64.sh
+COPY scripts/install-zed-4-1-aarch64.sh /opt/zed/install-zed-4-1-aarch64.sh
+COPY scripts/install-zed-5-0-aarch64.sh /opt/zed/install-zed-5-0-aarch64.sh
 
 RUN --mount=type=cache,target=/var/cache/apt \
   if [ "$(uname -m)" = "x86_64" ]; then \
-    sudo chmod +x /opt/zed/install-zed-x86_64.sh; \
-    /opt/zed/install-zed-x86_64.sh; \
+  sudo chmod +x /opt/zed/install-zed-x86_64.sh; \
+  /opt/zed/install-zed-x86_64.sh; \
+  elif [[ ${ZED_SDK_MAJOR} -eq 5 && ${ZED_SDK_MINOR} -eq 0 ]]; then \
+  sudo chmod +x /opt/zed/install-zed-5-0-aarch64.sh; \
+  /opt/zed/install-zed-5-0-aarch64.sh; \
+  elif [[ ${ZED_SDK_MAJOR} -eq 4 && ${ZED_SDK_MINOR} -eq 1 ]]; then  \
+  sudo chmod +x /opt/zed/install-zed-4-1-aarch64.sh; \
+  /opt/zed/install-zed-5-0-aarch64.sh; \
   else \
-    sudo chmod +x /opt/zed/install-zed-aarch64.sh; \
-    /opt/zed/install-zed-aarch64.sh; \
+  echo "Unsupported ZED SDK version: ${ZED_SDK_MAJOR}.${ZED_SDK_MINOR}"; \
+  exit 1; \
   fi
 
 # Revert to root user
