--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -140,6 +140,7 @@ RUN --mount=type=cache,target=/var/cache/apt \
     python3-opencv=4.5.4+dfsg-9ubuntu4 \
     python3-scipy
 
+
 # Downgrade to setuptools < 70.0.0
 # https://github.com/pypa/setuptools/issues/4483
 RUN python3 -m pip install -U \
@@ -150,6 +151,8 @@ RUN python3 -m pip install -U \
     Cython \
     ninja \
     wheel
+
+RUN python3 -m pip install --upgrade pip setuptools wheel packaging
 
 # Python3 PIP packages
 RUN python3 -m pip install -U \
