--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -428,6 +428,33 @@ RUN apt-get install -y yasm && wget https://ffmpeg.org/releases/ffmpeg-4.4.2.tar
 
 FROM extended-${PLATFORM} AS base
 
+
+
+
+
+# -------- RTAB-Map 설치 (core + ros2) --------
+WORKDIR /tmp
+
+RUN git clone https://github.com/introlab/rtabmap.git && \
+    cd rtabmap && \
+    git checkout master && \
+    rm -rf build && mkdir build && cd build && \
+    cmake .. \
+        -DCMAKE_BUILD_TYPE=Release \
+        -DWITH_CUDA=ON \
+        -DWITH_OPENMP=ON \
+        -DWITH_G2O=ON \
+        -DWITH_PCL=ON && \
+    make -j$(nproc) && make install && ldconfig && \
+    cd /tmp && rm -rf rtabmap
+
+# rtabmap_ros (ROS 2 Humble용) – ros2 브랜치 사용
+RUN mkdir -p /workspaces/isaac_ros-dev/src && \
+    git clone --depth=1 --branch ros2 https://github.com/introlab/rtabmap_ros.git /workspaces/isaac_ros-dev/src/rtabmap_ros
+
+
+
+
 # Install Ceres
 RUN git clone https://github.com/ceres-solver/ceres-solver.git && \
     cd ceres-solver && \
