--- a/docker/Dockerfile.us_kuka
+++ b/docker/Dockerfile.us_kuka
@@ -9,4 +9,6 @@
 ARG BASE_IMAGE
 FROM ${BASE_IMAGE}
 
-RUN pip install open3d pyrealsense2 cv_bridge
+RUN apt-get update \
+ && apt-get remove -y python3-blinker \
+ && pip install open3d pyrealsense2 cv_bridge
