--- a/scripts/.isaac_ros_common-config
+++ b/scripts/.isaac_ros_common-config
@@ -7,8 +7,5 @@ ISAAC_ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
 # docker_deply.sh config
 # BASE_IMAGE_KEY=aarch64.ros2_humble.user
 # BASE_IMAGE_KEY=x86_64.ros2_humble.dgx_user.orx_data_processing
-BASE_IMAGE_KEY=x86_64.ros2_humble.user
-DEPLOY_IMAGE_NAME=girf/orx-middleware-isaac-ros-desktop-fri_kuka
-ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
-LAUNCH_PACKAGE=fri_med14
-LAUNCH_FILE=orx_fri_kuka.launch.py
+BASE_IMAGE_KEY=x86_64.ros2_humble.user.us_kuka
+DEPLOY_IMAGE_NAME=girf/orx-middleware-isaac-ros-desktop-us_kuka
