Update Dockerfile and configuration for us_aixplorer deployment
- Enhanced Dockerfile to install Jupyter and Bash kernel.
- Updated configuration paths and image names for us_aixplorer.
- Simplified run_dev_us_aixplorer script by removing unnecessary arguments.

--- a/docker/Dockerfile.us_kuka
+++ b/docker/Dockerfile.us_kuka
@@ -12,3 +12,15 @@ FROM ${BASE_IMAGE}
 RUN apt-get update \
  && apt-get remove -y python3-blinker \
  && pip install open3d pyrealsense2 cv_bridge
+
+# Install Jupyter and Bash kernel
+RUN apt-get update && apt-get install -y \
+    python3-pip \
+    bash \
+    && pip3 install --no-cache-dir \
+    notebook \
+    bash_kernel \
+    && python3 -m bash_kernel.install
+
+# Expose Jupyter Notebook port
+EXPOSE 8888
