--- a/scripts/.isaac_ros_common-config
+++ b/scripts/.isaac_ros_common-config
@@ -1,5 +1,5 @@
 # run_dev.sh config
-CONFIG_IMAGE_KEY=ros2_humble.user
+CONFIG_IMAGE_KEY=ros2_humble.user.us_kuka
 CONFIG_DOCKER_SEARCH_DIRS=/home/fred/orx_middleware/isaac_ros_common/docker
 BASE_DOCKER_REGISTRY_NAMES=("nvcr.io/isaac/ros")
 ISAAC_ROS_WS=/home/fred/orx_middleware/ros2_ws
@@ -7,8 +7,12 @@ ISAAC_ROS_WS=/home/fred/orx_middleware/ros2_ws
 # docker_deply.sh config
 # BASE_IMAGE_KEY=aarch64.ros2_humble.user
 # BASE_IMAGE_KEY=x86_64.ros2_humble.dgx_user.orx_data_processing
-BASE_IMAGE_KEY=x86_64.ros2_humble.user.us_aixplorer
-DEPLOY_IMAGE_NAME=girf/orx-middleware-isaac-ros-desktop-us_aixplorer
-ROS_WS=/home/fred/orx_middleware/ros2_ws
-LAUNCH_PACKAGE=us_aixplorer
-LAUNCH_FILE=aixplorer.launch.py
+# BASE_IMAGE_KEY=x86_64.ros2_humble.user.us_kuka
+# DEPLOY_IMAGE_NAME=girf/orx-middleware-isaac-ros-desktop-us_kuka
+
+AGE_KEY=x86_64.ros2_humble.user.us_kuka
+DEPLOY_IMAGE_NAME=girf/orx-middleware-isaac-ros-desktop-us_kuka
+# ROS_WS=/home/fred/orx_middleware/ros2_ws
+# LAUNCH_PACKAGE=us_aixplorer
+# LAUNCH_FILE=aixplorer.launch.py
+
