--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -68,7 +68,6 @@ RUN --mount=type=cache,target=/var/cache/apt \
     python3-dev \
     python3-distutils \
     python3-flake8 \
-    python3-pip \
     python3-pybind11 \
     python3-pytest \
     python3-pytest-repeat \
@@ -81,6 +80,10 @@ RUN --mount=type=cache,target=/var/cache/apt \
 
 # Set Python3 as default
 RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 1
+
+
+# Install pip using the get-pip.py script. apt-get install python3-pip does not install the latest pip version.
+RUN wget https://bootstrap.pypa.io/get-pip.py && python3 get-pip.py && rm get-pip.py
 
 # Add Isaac apt repository
 RUN --mount=type=cache,target=/var/cache/apt \
@@ -165,6 +168,7 @@ RUN python3 -m pip install -U \
     flake8-import-order \
     flake8-quotes \
     gpustat==0.6.0 \
+    h11==0.16.0 \
     importlib_resources \
     networkx \
     "numpy>=1.24.4,<2" \
@@ -179,6 +183,7 @@ RUN python3 -m pip install -U \
     "setuptools_scm>=6.2" \
     tqdm \
     trimesh \
+    virtualenv==20.26.6 \
     "warp-lang>=0.9.0" \
     "yourdfpy>=0.0.53" \
     opentelemetry-api==1.28.1 \
@@ -421,6 +426,10 @@ RUN apt-get install -y yasm && wget https://ffmpeg.org/releases/ffmpeg-4.4.2.tar
     --libdir=/usr/lib/x86_64-linux-gnu --incdir=/usr/include/x86_64-linux-gnu --arch=amd64 \
     --disable-stripping && make -j 4 && make install
 
+# Install yq
+RUN wget -nv https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/local/bin/yq \
+    && chmod +x /usr/local/bin/yq
+
 # --------------------------------------------------------------------------------------------------
 
 FROM extended-${PLATFORM} AS base
@@ -479,7 +488,3 @@ COPY middleware_profile[s]/*profile.xml /usr/local/share/middleware_profiles/
 
 # Store list of packages (must be last)
 RUN mkdir -p /opt/nvidia/isaac_ros_dev_base && dpkg-query -W | sort > /opt/nvidia/isaac_ros_dev_base/base-end-packages.csv
-
-# Install yq
-RUN wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/local/bin/yq \
-&& chmod +x /usr/local/bin/yq
