--- a/scripts/.isaac_ros_common-config
+++ b/scripts/.isaac_ros_common-config
@@ -1,5 +1,5 @@
 # run_dev.sh config
-CONFIG_IMAGE_KEY=ros2_humble.user.realsense
+CONFIG_IMAGE_KEY=ros2_humble.user.kinect
 CONFIG_DOCKER_SEARCH_DIRS=/home/${USER}/dev/orx/orx_middleware/isaac_ros_common/docker
 BASE_DOCKER_REGISTRY_NAMES=("nvcr.io/isaac/ros")
 ISAAC_ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
@@ -7,8 +7,8 @@ ISAAC_ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
 # docker_deply.sh config
 # BASE_IMAGE_KEY=aarch64.ros2_humble.user.realsense.encoder
 # BASE_IMAGE_KEY=x86_64.ros2_humble.dgx_user.orx_data_processing
-BASE_IMAGE_KEY=x86_64.ros2_humble.user.realsense
-DEPLOY_IMAGE_NAME=vschorp98/orx-middleware-isaac-ros-desktop-realsense_d435
+BASE_IMAGE_KEY=x86_64.ros2_humble.user.kinect
+DEPLOY_IMAGE_NAME=girf/orx-middleware-isaac-ros-desktop-kinect
 ROS_WS=/home/${USER}/dev/orx/orx_middleware/ros2_ws
-LAUNCH_PACKAGE=realsense2_camera
-LAUNCH_FILE=orx_realsense_d435.launch.py
+LAUNCH_PACKAGE=azure_kinect_ros_driver
+LAUNCH_FILE=driver.launch.py
